# Augustan

./: .env.example  .gitignore  API_SECURITY_GUIDE.md  BINANCE_TESTNET_SETUP.md  CLI_GUIDE.md  CLI_SUMMARY.md  COMPLETION_SETUP.md  CONNECTION_TEST_RESULTS.md  FINAL_API_STATUS.md  FINAL_CONNECTION_STATUS.md  FINAL_TEST_RESULTS.md  INSTALLATION_GUIDE.md  LICENSE  LLD.md  MANIFEST.in  ORDER_MANAGER_INTEGRATION_GUIDE.md  POSITION_SIZING_GUIDE.md  README.md  README_CLI.md  README_FUTURES.md  README_RESTRUCTURE.md  RISK_MANAGER_TEST_RESULTS.md  SAPI_TESTNET_GUIDE.md  SECURITY_SUMMARY.md  SPOT_TESTNET_SETUP.md  TESTNET_DRY_RUN_GUIDE.md  TESTNET_READY.md  TEST_RESULTS_SUMMARY.md  TODO.md  TRADING_MODES_GUIDE.md  __init__.py  _aug  active_config.json  aug  cli.py  completion.sh  config.py  constants.py  data_loader.py  data_service.py  (+30 more)
.github/: README.md
.github/scripts/: sync_kanban.py
.github/workflows/: kanban-sync.yml
adapters/: __init__.py  base_adapter.py  pi42_adapter.py
augustan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backtesting/: backtester.py  performance_metrics.py  run_backtest.py
cli/: __init__.py  cli.py
config/: exchanges_config.json  live_trading_config.json  paper_trading_config.json
configs/: README.md  config_manager.py  default.json
configs/live/: config.json
configs/testing/: config.json
core/: __init__.py
core/config/: __init__.py  switch_env.py
core/exceptions/: __init__.py  exceptions.py
core/utils/: __init__.py  constants.py
deployment/: futures-trading.service
paper_trading/: demo_paper_trading.py
scripts/: __init__.py  augustan_cli.py  cli_demos.py  demo_paper_trading.py  main.py  run_backtest.py  run_tests.py
services/: __init__.py
services/adapters/: __init__.py  pi42_mock_adapter.py  pi42_public_adapter.py
services/backtesting/: __init__.py  backtester.py  demo_backtest.py  run_backtest.py  strategy_framework.py
services/data/: __init__.py  data_loader.py  data_service.py
services/paper_trading/: __init__.py  live_data_feed.py  (+3 more)
test_volume_data/: futures_volume_analysis_20250901_222129.json
tests/: __init__.py  test_risk_manager.py
trading_system/: __init__.py  __main__.py  cli.py  config_loader.py
volume_data/: enhanced_volume_analysis_20250904_012624.json  futures_volume_analysis_20250902_025756.json  futures_volume_analysis_20250902_030149.json  futures_volume_analysis_20250903_234625.json  futures_volume_analysis_20250904_010129.json  latest_enhanced_analysis.json  latest_volume_analysis.json
(+70 files in other folders)
