[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augustan"
version = "1.0.0"
description = "The ultimate futures trading and position sizing tool with intelligent risk management"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Augustan Trading", email = "info@augustan.trading"}
]
keywords = ["trading", "futures", "cryptocurrency", "position-sizing", "risk-management", "binance", "bybit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "ta>=0.10.0",
    "python-binance>=1.0.16",
    "requests>=2.25.0",
    "websocket-client>=1.0.0",
    "dataclasses-json>=0.5.7",
    "pydantic>=1.8.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "loguru>=0.6.0",
    "schedule>=1.2.0",
    "pathlib2>=2.3.7",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/augustan-trading/augustan"
Repository = "https://github.com/augustan-trading/augustan"
Documentation = "https://github.com/augustan-trading/augustan#readme"
"Bug Tracker" = "https://github.com/augustan-trading/augustan/issues"

[project.scripts]
aug = "trading_system.cli:cli"

[tool.setuptools]
packages = ["trading_system"]

[tool.setuptools.package-dir]
trading_system = "trading_system"

[tool.setuptools.package-data]
trading_system = ["config/*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
